--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "nodemon": "^3.0.1"
   },
   "scripts": {
-    "start": "node app.js"
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
